== (02/02/10)
* Rewrote the forms/form_fields/form_field_options to use accepts_nested_attributes_for (Tom Cocca)
* Added a default prototype JS file and a helper method to include that file (Tom Cocca)
  * <%= javascript_include_tag :dynamic_forms_prototype %>
  * Start to make JS semi-unobtrusive for Adding/Removing the form_fields and form_field_options
* Added the base for being able to provide meta options per form field, no longer one huge text are for comma separated options (Tom Cocca)
* When a radio button select field is required make the first form_field_option selected by default if the form_submission value for that field is blank (Tom Cocca)

== (01/28/10)
* Added a confirmed? validation to ensure a checkbox was checked (Tom Cocca)
* Added a RadioButtonSelect field type (Tom Cocca)
  * Allows you to specify options for each radio button
  * Displays the field label with radio buttons and a label for each option
  * Optional required? validation
* Fixed the label and element id issues on the check box group checkboxes (Tom Cocca)

== (01/27/10)
* Added a configuration object (Tom Cocca)
  * Configured in an initializer
  * Generator script creates and initializer with documention on all the default settings

== (01/26/10)
* Added the ability to opt to have an email sent for each submission (Tom Cocca)
  * Can set this per form
  * If the form has file fields and the user has submitted files they are sent as attachments in the email

== (01/25/10)
* Added Form "Confirmation Text" which is displayed when a form is submitted successfully (Tom Cocca)
* Fixed the bug when uploading the same file for multiple file fields in the same form, the file gets overwritten.  Now, I prepend the form_field.id onto the front of the file name. (Tom Cocca)
* Added the changelog file (Tom Cocca)

== (01/23/10)
* Added a FileField option (Tom Cocca)
  * Ability to specify the mime types for each file field or leave blank to use the default mime type set

== (01/22/10)