@@ -1,6 +1,8 @@
 <% field = f.object %>
+<% options_id = f.object.new_record? ? 'field_options_new_form_fields' : "field_options_#{f.object.id}" %>
+
 <div class="field <%= field.kind %>">
-  <h4><%= field.kind.titleize %></h4>
+  <h4 class="drag_handle"><%= field.kind.titleize %></h4>
   <%= f.hidden_field :sti_type %>
   <%= f.hidden_field :position, :class => 'field_position' %>
   
@@ -12,9 +14,9 @@
   <% if field.is_selector? %>
     <% field.form_field_options.build(:position => 1) if field.form_field_options.blank? %>
     
-    <p>Please enter the possible values separated by commas.</p>
+    <p>Click on 'Re-Order' text and drag to re-order form fields.</p>
     
-    <div class="form_field_options">
+    <div id="<%= options_id %>" class="form_field_options">
       <% f.fields_for :form_field_options do |ffo| %>
         <%= render :partial => 'forms/form_field_option', :locals => {:f => ffo} %>
       <% end %>
