@@ -3,6 +3,7 @@
   <p>
     <%= f.label :label, "Label:" %>
     <%= f.text_field :label %>
+    <span class="drag_handle">Re-Order</span>
     <%= link_to_remove_field_option "Remove Option", f %>
   </p>
 </div>
